# flask-mongodb

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt
src/: app.py
src/config/: mongodb.py
src/routes/: employees.py
src/services/: employee.py  services.py  validate.py
src/static/js/: formHandler.js
src/templates/: index.html
src/templates/pages/: 404.html  employee.html  employees.html
tests/: test_config.py  test_employee.py  test_validate.py
